--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 :root {
-    --countdown-bg: rgba(255, 255, 255, 0.941);
+    --countdown-bg: rgba(255, 255, 255,0.9);
     --countdown-bg2:rgba(0, 0, 0, 0.59);
     --text-color: #333;
     --accent-color: #e8d3d1;
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-family: 'Cormorant Garamond', Georgia, serif;
+    font-family: "Tahoma", Tahoma, Tahoma;
     background: url("photo.png") no-repeat center 35% fixed;
     background-size: cover;
     color: var(--text-color);
@@ -36,7 +36,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), transparent);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.25), transparent);
     z-index: 0;
 }
 
