--- a/home.css
+++ b/home.css
@@ -281,7 +281,7 @@ body::before {
     letter-spacing: 5px;
     color: #000000;
     background-color: var(--countdown-bg2);
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.605);
+    text-shadow: 0 5px 20px rgba(0, 0, 0, 0.605);
 }
 
 .music-button {
@@ -290,7 +290,7 @@ body::before {
     background-color: var(--button-color);
     color: var(--text-color);
     text-decoration: none;
-    border-radius: 40px;
+    border-radius: 20px;
     font-weight: 500;
     font-size: 1.2rem;
     letter-spacing: 1px;
@@ -305,7 +305,7 @@ body::before {
     z-index: 1;
     opacity: 0;
     transform: translateY(20px);
-    animation: fadeInUp 1s ease forwards 1s;
+    animation: fadeInUp 4s ease forwards 1s;
 }
 
 .music-button:hover {
