--- a/home.css
+++ b/home.css
@@ -491,12 +491,16 @@ body::before {
     transform: translateY(-3px);
     color: #555;
 }
-
 .footer-center {
     display: flex;
     gap: 15px;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
+ 
+    width: 100%;
+    max-width: 1200px;
+    z-index: 10;
 }
 
 .music-platform {
@@ -513,7 +517,6 @@ body::before {
 }
 
 .music-platform:hover {
-    transform: translateY(-3px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
